[gd_scene load_steps=6 format=2]

[ext_resource path="res://Gun/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprite/Tanks/Spritesheet/onlyObjects_default.png" type="Texture" id=2]
[ext_resource path="res://Weapon.gd" type="Script" id=3]
[ext_resource path="res://Sprite/Characters/PNG/weapon_silencer.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.15, 0.4 ) ]
}

[node name="Weapon" type="Node2D"]
scale = Vector2( 1.09831, 1.01593 )
script = ExtResource( 3 )
Bullet = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 20.0309, -2.76566e-05 )
scale = Vector2( 0.910493, 0.984317 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 15.4784, -2.76566e-05 )
scale = Vector2( 0.910493, 0.984317 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
position = Vector2( 16.3396, 0.664437 )
rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 324, 334, 20, 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath(".")
anims/muzzle_flash = SubResource( 2 )
